views/assets/src/helpers/less/customization/pm-task-list.less
/* ... */
.pm .mce-tinymce {
    border-radius: var(--pm-input-radius);
}

div.mce-toolbar-grp {
    border-top-left-radius: var(--pm-input-radius)!important;
    border-top-right-radius: var(--pm-input-radius)!important;
}

div.mce-statusbar {
    border-bottom-left-radius: var(--pm-input-radius);
    border-bottom-right-radius: var(--pm-input-radius);
}
ul.pm-user-list li {
    margin-bottom: 7px;
}
.pm .pm-message-page .pm-message-list ul, .pm .pm-message-page .pm-message-list li {
    overflow: hidden!important;
}
.pm .pm-message-page .pm-message-list ul {
    border: none!important;
    background: transparent!important;
}

.pm .pm-message-page .pm-message-list li {
    border: none!important;
    padding: 20px!important;
    border-radius: 10px!important;
    background: #fff!important;
    margin-bottom: 15px!important;
}

.pm .pm-message-page .pm-message-list {
    margin: 0!important;
    border: none!important;
    box-shadow: none!important;
    background: transparent!important;
}

.pm .pm-message-page {
    background: transparent!important;
}

.pm .pm-message-page .pm-message-list li:hover {
    border-left: 0px!important;
    background: #fff!important;
}
.pm .pm-message-page .pm-message-list li .comment-count {
    background: none!important;
    padding-left: 0!important;
}

.pm .pm-message-page .pm-message-list li .pm-messge-link {
    margin-bottom: 0!important;
    margin-right: 0!important;
}

.pm .pm-message-page .pm-message-list li .pm-messge-link .pm-messege-wrapper {
    margin: 0;
}

.pm .pm-message-page .pm-message-list li .comment-count i, .pm .pm-message-page .pm-message-list li .comment-count a {
    color: #a0a0a0;
}

.pm .pm-message-page .pm-message-list li .comment-count i {
    position: relative;
    top: 3px;
}
.pm .pm-message-page .pm-message-list , li .pm-message-action i, .pm .pm-message-page .pm-message-list , li .pm-message-action span.dashicons {
    color: #a0a0a0;
}
.pm-message-form-wrap .submit {
    padding-bottom: 0;
}
.pm .pm-message-page .pm-message-list .pm-user-list li {
    padding: 1px!important;
    margin-bottom: 7px!important;
}
.pm .pm-message-page .pm-message-list .pm-box-title {
    color: var(--pm-headings-color)!important;
    background: none!important;
}
.pm-comment-area.pm-box-shadow {
    box-shadow: none;
    border: none;
    padding: 30px;
    border-radius: 10px;
}

.pm-comment-area.pm-box-shadow h3 {
    display: none;
}

.pm .pm-comment-form-wrap {
    padding: 0;
    border: none;
}

.pm-comment-form-wrap .pm-comment-form {
    padding: 0;
}

.pm-individual-discussion .pm-comment-form .message {
    background: transparent;
    padding: 0;
    margin-bottom: 20px!important;
}

.pm-comment-form .notify-users, .pm-message-form .notify-users {
    border: none!important;
    box-shadow: none!important;
}

.pm-comment-form .pm-attachment-area {
    border: none!important;
    margin-top: 0!important;
    margin-bottom: 0!important;
}

.pm-individual-discussion .pm-comment-form h2.pm-box-title {
    margin-top: 0!important;
}
.pm-comment-form .pm-attachment-area {
    margin-left: -5px;
}
.pm-single .pm-entry-detail {
    padding: 30px!important;
    border: none!important;
    border-radius: 10px!important;
    box-shadow: none!important;
}

.pm-single {
    border: none!important;
    box-shadow: none!important;
    background: transparent!important;
}
#pm-signle-message h3.pm-box-title {
    padding: 0;
    border: none;
    font-size: 18px;
    color: #000;
}

#pm-signle-message .pm-small-title {
    margin-top: 4px!important;
}
.pm-individual-discussion form {
    margin-bottom: 0;
}

.pm-individual-discussion .submit {
    padding-bottom: 0!important;
}
#pm-signle-message .pm-entry-detail div p:last-child {
    margin-bottom: 0!important;
}
.comment-lists-wrapper ul.pm-comment-wrap li.pm-comment, .pm-milestone-data {
    border: none;
    padding: 30px!important;
    background: #fff;
    border-radius: 10px;
    margin-bottom: 20px;
}

.comment-lists-wrapper ul.pm-comment-wrap {
    border: none;
}

.comment-lists-wrapper ul.pm-comment-wrap li:last-child {
    margin-bottom: 0px;
}
.pm .milestone .pm-content, .pm-milestone .pm-milestone-form{
    max-width: inherit!important;
    width: 100%;
}
.milestone .pm-content h3 {
    text-align: left;
}

.milestone .pm-content .pm-new-milestone-form .item, .pm-milestone-form .item {
    margin-bottom: 15px;
}
.pm-milestone-data:not(:first-child) {
    margin-top: 30px;
}

.pm-milestone-data h2.group-title {
    margin-bottom: 20px!important;
}
.pm-milestone-data .pm-milestone h3.milestone-head {
    margin: 0!important;
}

.pm-milestone-data .pm-milestone h3.milestone-head span.time-left {
    font-size: 12px;
    color: #a0a0a0;
    font-weight: normal;
}
.pm-milestone-data .pm-milestone h3.milestone-head ul.pm-links.pm-right {
    display: flex;
    align-items: center;
}

.pm-milestone-data .pm-milestone h3.milestone-head ul.pm-links.pm-right a {
    display: inline-block;
    width: 25px;
    height: 25px;
    cursor: pointer;
    color: #a0a0a0;
}
// .pm-milestone-edit-form {
//     margin-top: 30px;
// }

.pm-milestone-edit-form form.pm-milestone-form {
    margin-bottom: 0;
}

.pm-milestone-edit-form .submit {
    padding-bottom: 0;
}

/*Activity Module*/
.pm-activities.pm-activities-container {
    background: transparent;
    border: none;
    padding: 0;
}
.pm .pm-activity-list li.pm-row .pm-activity-date, .pm .pm-activity-list li.pm-row .pm-activity-body, #pm-progress-wrap .pm-activity-heads {
    box-shadow: none!important;
    border: none!important;
}

.pm .pm-activity-list li.pm-row .pm-activity-body ul li {
    overflow: hidden;
    padding: 0!important;
    background: transparent!important;
    border: none;
    margin-bottom: 8px!important;
}

.pm .pm-activity-list li.pm-row .pm-activity-body ul li .date {
    background: none!important;
    padding: 0!important;
}
/* ... */

